fix: Correct yellow color palette
Updates the hex values for the yellow color palette.
Also, converts amber color hex values to lowercase.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -42,23 +42,23 @@
     <color name="amber_300">#FCD34D</color>
     <color name="amber_400">#FBBF24</color>
     <color name="amber_500">#F59E0B</color>
-    <color name="amber_600">#D97706</color>
-    <color name="amber_700">#B45309</color>
-    <color name="amber_800">#92400E</color>
-    <color name="amber_900">#78350F</color>
-    <color name="amber_950">#451A03</color>
+    <color name="amber_600">#d97706</color>
+    <color name="amber_700">#b45309</color>
+    <color name="amber_800">#92400e</color>
+    <color name="amber_900">#78350f</color>
+    <color name="amber_950">#451a03</color>
 
-    <color name="yellow_50">#FFFBEB</color>
-    <color name="yellow_100">#FEF3C7</color>
-    <color name="yellow_200">#FDE68A</color>
-    <color name="yellow_300">#FCD34D</color>
-    <color name="yellow_400">#FBBF24</color>
-    <color name="yellow_500">#F59E0B</color>
-    <color name="yellow_600">#D97706</color>
-    <color name="yellow_700">#B45309</color>
-    <color name="yellow_800">#92400E</color>
-    <color name="yellow_900">#78350F</color>
-    <color name="yellow_950">#451A03</color>
+    <color name="yellow_50">#fefce8</color>
+    <color name="yellow_100">#fef9c3</color>
+    <color name="yellow_200">#fef08a</color>
+    <color name="yellow_300">#fde047</color>
+    <color name="yellow_400">#facc15</color>
+    <color name="yellow_500">#eab308</color>
+    <color name="yellow_600">#ca8a04</color>
+    <color name="yellow_700">#a16207</color>
+    <color name="yellow_800">#854d0e</color>
+    <color name="yellow_900">#713f12</color>
+    <color name="yellow_950">#422006</color>
 
     <color name="lime_50">#f7fee7</color>
     <color name="lime_100">#ecfccb</color>
