--- a/app/src/main/res/drawable/ic_menu_24dp.xml
+++ b/app/src/main/res/drawable/ic_menu_24dp.xml
@@ -3,22 +3,26 @@
     android:height="24dp"
     android:viewportWidth="24"
     android:viewportHeight="24">
+
     <path
-        android:pathData="M2,3h20"
-        android:strokeWidth="2"
         android:strokeColor="#FF000000"
+        android:strokeWidth="2"
         android:strokeLineCap="round"
-        android:strokeLineJoin="round" />
+        android:strokeLineJoin="round"
+        android:pathData="M4,5 H20"/>
+
     <path
-        android:pathData="M21,3v11a2,2 0,0 1,-2 2H5a2,2 0,0 1,-2 -2V3"
-        android:strokeWidth="2"
         android:strokeColor="#FF000000"
+        android:strokeWidth="2"
         android:strokeLineCap="round"
-        android:strokeLineJoin="round" />
+        android:strokeLineJoin="round"
+        android:pathData="M4,12 H20"/>
+
     <path
-        android:pathData="m7,21 l5,-5 5,5"
-        android:strokeWidth="2"
         android:strokeColor="#FF000000"
+        android:strokeWidth="2"
         android:strokeLineCap="round"
-        android:strokeLineJoin="round" />
+        android:strokeLineJoin="round"
+        android:pathData="M4,19 H20"/>
+
 </vector>
